
 Development version:
 --------------------

Emulation:
- GEMDOS HD:
  - Fix: Disable GEMDOS opcodes after GEMDOS drive is disabled
- Video:
  - fix reading video counter $FF8205/07/09 after modifying it while
    display is ON.
  - fix location of the video counter's restart when screen runs at 60 Hz

Emulator:
- Better SDL2 support (e.g. resizable windows), SDL2 is now enabled by default
- NatFeats SCSI driver for Linux
- SDL GUI:
  - User can provide volume label when creating a floppy image
  - Shortcuts can be configured in the keyboard dialog
- Debugger:
  - Fix: close debugger log file only when explicitly requested,
         not when continuing emulation from debugger
  - Fix: direct DSP register, disasm and memdumps to debugger log
         file, similarly to CPU
  - Fix: direct CPU and DSP symbol traces to trace file, not stderr

Fixed demos:
- spec512 image in the Intro of the Place To Be Again (video, restart counter)
- Menu screen in the Place To Be Again (video, writing/reading video
  counter during active display)


 Version 1.9.0 (2015-09-10):
 ---------------------------

Emulation:
- STE Joypads:
  - Fix: Joypad A Option button
  - Fix: Joypad B extended buttons
- ACSI / IDE:
  - Fix: image file attribute check when using device files
  - Fix: v1.8 ACSI regression with A1=0 case
- GEMDOS HD:
  - Fix: matching exactly 8 chars long file names containing '.'
  - Better mapping of host errors to GEMDOS error codes
  - Support for mapping file names with 8-bit characters
    between host and Atari encodings (umlauted chars etc)
  - Program header (TT-RAM) allocate flags support
- CPU:
  - update WinUAE CPU core version from 2.3 -> 2.8.1 -> 3.0 -> 3.1
    - MMU emulation fixed
    - instruction/data cache emulation
    - better 68020/30 prefetch pipeline
    - cycle accuracy, etc.
  - in 68000 mode, remove some un-allowed <ea> for CMPI, BTST and TST
  - check for address error when new PC is set at the end of RTE, RTS and RTR